# thrift

./: configure.ac
lib/java/: Makefile.am  pom.xml
